--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,246 @@
 .App {
   text-align: center;
+  background-image:url('./images/wood.jpg') no-repeat -9999px -9999px;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.aclonica{
+  font-family:"Aclonica";
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#start{
+  font-size:36px;
+  height:70px;
+  width:160px;
+  border:none;
+  background:white;
+  box-shadow:0px 0px 10px black;
+  padding:5px 20px 5px 20px;
+  border-radius:50px;
+  transition-duration:0.4s;
+  font-family:"Aclonica";
+  outline:none;
 }
-
-.App-link {
-  color: #61dafb;
+#start:hover{
+  border-style:solid;
+  border-width:1px 10px 1px 10px;
+  border-color:white;
+  background:black;
+  color:white;
+  width:180px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+#logo{
+  margin:0px auto 20px auto;
+  box-shadow:0px 0px 30px 10px grey;
+  height:250px;
+  border-radius:50px;
+  display:block;
+}
+.selectPuzzle{
+  border:1px solid black;
+  background:white;
+  width:40px;
+  height:30px;
+  margin:5px;
+  font-size:20px;
+}
+.puzzleBox{
+  width:300px;
+  height:300px;
+  margin:10px auto 0px auto;
+  border:1px solid grey;
+  background-image:url('./images/wood.jpg');
+  box-shadow:-1px 1px 10px 6px rgb(37, 37, 37);
+  position:relative;
+  z-index:0;
+}
+.imgGroup{
+  margin:16px 0px 0px 0px;
+}
+.pzlImg{
+  width:290px;
+  height:100px;
+  margin:10px auto 0px auto;
+}
+.btnGroup{
+  margin:30px 0px 0px 0px;
+}
+.btnGroup input{
+  width:26px;
+  height:32px;
+  background:white;
+  border:none;
+  outline:none;
+  box-shadow:0px 1px 6px 3px black;
+  font-size:20px;
+  margin:10px 5px 10px 5px;
+  outline:none;
+}
+#solved{
+  width:300px;
+  height:300px;
+  margin:10px auto -310px auto; 
+  position:relative;
+  z-index:1;
+  background-image:url('./images/solved.png');
+  background-size:260px;
+  background-repeat:no-repeat;
+  background-position:center;
+  display:none;
+}
+.displayHintButton{
+  display:block;
+  margin:20px auto 0px auto;
+  width:60px;
+  box-shadow:0px 0px 3px 1px black;
+  font-size:20px;
+  border:none;
+  outline:none;
+  border-radius:3px;
+}
+.displayHintButton:active{
+  background:black;
+  color:white;
+}
+.displayHintButton:hover{
+  box-shadow:0px 0px 10px 3px black;
+}
+.hint{
+  opacity:0;
+  height:5px;
+  width:200px;
+  margin:10px auto 0px auto;
+  transition-duration:0.5s;
+}
+.displayHint:active .hint{
+  opacity:1;
+  height:auto;
+}
+#next{
+  margin:15px auto 0px auto;
+  border:none;
+  background:none;
+  font-size:30px;
+  display:none;
+  padding:5px 10px 5px 10px;
+  box-shadow:0px 0px 2px 1px black;
+  transition-duration:0.4s;
+  outline:none;
+}
+#next:hover{
+  text-decoration:underline;
+  padding:5px 25px 5px 20px;
+  box-shadow:0px 0px 10px 2px black;
+  border-style:solid;
+  border-width:0px 10px 0px 10px;
+  border-color:black;
+  border-radius:30px;
+}
+.top{
+  width:40px;
+  height:40px;
+  margin:10px auto 10px auto;
+  border:5px double black;
+  background:rgb(190, 190, 190);
+  border-radius:20px;
+  outline:none
+}
+.mid button{
+  display:inline-block;
+  width:40px;
+  height:40px;
+  border:5px double black;
+  background:grey;
+  border-radius:20px;
+  outline:none;
+  margin:0px 30px 0px 30px;
+}
+.bottom{
+  width:40px;
+  height:40px;
+  margin:10px;
+  border:5px double black;
+  background:rgb(105, 105, 105);
+  border-radius:20px;
+  outline:none
+}
+.top:active, .mid button:active, .bottom:active{
+background:green;
+box-shadow:0px 0px 10px 3px green;
+}
+.phoneBtns{
+  width:240px;
+  margin:-5px auto 0px auto;
+}
+.phoneBtn{
+  border:5px double black;
+  box-shadow:0px 0px 10px black;
+  background:grey;
+  border-radius:20px;
+  outline:none;
+  width:40px;
+  height:40px;
+  margin:0px 20px 20px 20px;
+}
+.phoneBtn:active{
+  background:green; 
+  box-shadow:0px 0px 10px 3px green;
+}
+.phonePuzzleImage{
+  margin:-30px auto 8px auto;
+}
+.congrats{
+ width:500px;
+}
+.selectLevel{
+  font-size:20px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  background:white;
+  border:none;
+  box-shadow:0px 0px 2px 1px black;
+  font-family:"Aclonica";
+  margin:2px;
+}
+.selectLevel:hover{
+  box-shadow:0px 0px 10px 3px black;
+  background:black;
+  color:white;
+}
+.fab{
+  margin:10px;
+}
+.fa-twitter{
+  color:#38A1F3;
+  text-decoration:none;
+}
+.fa-facebook{
+  color:#3b5998;
+}
+.fab:hover{
+  animation-name:spin;
+  animation-duration: 0.3s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+.fab:active{
+  animation-name:spin;
+  animation-duration: 0.3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes spin {
+  from {transform:rotate(0deg);}
+  to {transform:rotate(360deg);}
+}
+@-moz-keyframes spin {
+  from { -moz-transform: rotate(0deg); }
+  to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  from { -webkit-transform: rotate(0deg); }
+  to { -webkit-transform: rotate(360deg); }
+}
+@media screen and (max-width:600px){
+  .congrats{
+    width:200px;
   }
 }
