--- a/src/App.css
+++ b/src/App.css
@@ -109,10 +109,10 @@
   margin:10px auto 0px auto;
   transition-duration:0.5s;
 }
-.displayHint:active .hint{
+/* .displayHint:active .hint{
   opacity:1;
   height:auto;
-}
+} */
 #next{
   margin:15px auto 0px auto;
   border:none;
@@ -242,5 +242,10 @@ box-shadow:0px 0px 10px 3px green;
 @media screen and (max-width:600px){
   .congrats{
     width:200px;
+  }
+  #logo{
+    margin:0px auto 20px auto;
+    box-shadow:0px 0px 30px 10px grey;
+    height:200px;
   }
 }
